--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -110,9 +110,17 @@
 @media screen and (max-width: 480px) {
 
 #version {
-	display: none;
+	/* display: none; */
 	}
 
+	.content {
+	padding-top: 0px;
+	}
+	
+.page-title {
+	padding: 20px 0;
+	}
+	
 .version {
 	float:none;
 	}
