--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -112,7 +112,32 @@
 #version {
 	/* display: none; */
 	}
-
+ .logo
+ {
+	position:relative;
+	top:2%;
+	left:5%;
+	width:250px;
+	padding-bottom:20px;
+ }
+ input[type="text"] .pwdInput{
+    font-family: Arial, san-serif;
+	width:100px;
+	position:relative;
+	right:65%;
+}
+.selections
+{
+	position:relative;
+	right:15%;
+	top:inherit;
+}
+table, tr, td{
+	width:50%;
+	height:auto;
+	color:white;
+	
+}
 	.content {
 	padding-top: 0px;
 	}
